--- a/src/app/file-uploader/file-uploader.component.scss
+++ b/src/app/file-uploader/file-uploader.component.scss
@@ -1,78 +1,112 @@
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.pattern {
+  background-color: #121114;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23f2eff9' fill-opacity='0.4'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+}
+
+.container {
+  background-color: rgba(20, 20, 20, 0.9);
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .file-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 20px;
-    height: 400px;
-    width: 600px;
-    margin: auto;
-    border: 2px dashed #ddd;
-    padding: 40px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  height: 400px;
+  width: 600px;
+  margin: auto;
+  border: 2px dashed #ddd;
+  color: #fff;
+  padding: 40px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .form-container {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.file-content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
 
 .button {
-    align-self: flex-end;
-    text-align: center;
-    cursor: pointer;
-    border: 1px solid #cccccc;
-    border-radius: 10px;
-    padding: 10px 15px;
-    background: #2c49ca;
-    font-size: 1.5rem;
-    color: #fff;
+  align-self: flex-end;
+  text-align: center;
+  cursor: pointer;
+  border: 1px solid #cccccc;
+  border-radius: 10px;
+  padding: 10px 15px;
+  background: #2c49ca;
+  font-size: 1.5rem;
+  width: max-content;
+  color: #fff;
 }
 
 .file-title {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
 }
 
-.file-name{
-    word-break: break-all;
-    width: 100%;
+.file-name {
+  word-break: break-all;
+  width: 100%;
 }
 
 .file-header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 label.label input[type="file"] {
-    position: absolute;
-    top: -1000px;
-  }
-  .label {
-    width: 90%;
-    text-align: center;
-    cursor: pointer;
-    border: 1px solid #cccccc;
-    border-radius: 10px;
-    padding: 10px 15px;
-    background: #2c49ca;
-    font-size: 1.5rem;
-    color: #fff;
-    display: inline-block;
-  }
-  .label:hover {
-    background: #203699;
-  }
-  .label:active {
-    background: #203699;
-  }
-  .label:invalid+span {
-    color: #000000;
-  }
-  .label:valid+span {
-    color: #ffffff;
-  }
+  position: absolute;
+  top: -1000px;
+}
+.label {
+  width: 100%;
+  text-align: center;
+  cursor: pointer;
+  border: 1px solid #cccccc;
+  border-radius: 10px;
+  padding: 10px 15px;
+  background: #2c49ca;
+  font-size: 1.5rem;
+  color: #fff;
+  display: inline-block;
+}
+.label:hover {
+  background: #203699;
+}
+.label:active {
+  background: #203699;
+}
+.label:invalid + span {
+  color: #000000;
+}
+.label:valid + span {
+  color: #ffffff;
+}
