--- a/src/app/file-uploader/file-uploader.component.scss
+++ b/src/app/file-uploader/file-uploader.component.scss
@@ -66,6 +66,11 @@
   color: #fff;
 }
 
+.button.disabled {
+  background-color: #656565;
+  cursor: auto;
+}
+
 .file-title {
   font-size: 1.5rem;
 }
@@ -109,4 +114,50 @@ label.label input[type="file"] {
 }
 .label:valid + span {
   color: #ffffff;
+}
+
+.alert {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  color: var(--main-white);
+  z-index: 100000;
+  font-size: 16px;
+  font-weight: 600;
+  color: #fff;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+
+
+  @media screen and (max-width: 1000px) {
+    left: 0;
+    top: unset;
+    width: 100%;
+    bottom: 0;
+    z-index: 100000;
+  }
+}
+
+.red {
+  background: #dc3545;
+}
+
+.green {
+  background: #198754;
+}
+
+.close-button {
+  background-color: transparent;
+  border: none;
+
+  .icon {
+    color: var(--main-white);
+  }
 }
